# iceberg-janitor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
docker/: Dockerfile
docs/: multiregion-strategy.md  research-iceberg-maintenance-api.md  (+1 more)
flink-jobs/: pom.xml
legacy/: Makefile  README.md  flink-sizing.md  pyproject.toml
legacy/docker/: Dockerfile  Dockerfile.query-service
legacy/flink-jobs/src/main/java/com/icebergjanitor/: FlinkCompactionJob.java
legacy/helm/iceberg-janitor/: values.yaml
legacy/helm/iceberg-janitor/templates/: configmap-policy.yaml  cronjob.yaml
legacy/jmeter/: compare-results.py  query-service.py  run-benchmark.sh
legacy/manifests/base/: configmap-policy.yaml  namespace.yaml
legacy/manifests/dev/: kafka.yaml  knative-pingsource.yaml  knative-serving.yaml  kustomization.yaml  minio.yaml  query-service.yaml  rest-catalog.yaml
legacy/openapi/: iceberg-janitor-api-v2.yaml  iceberg-janitor-api.yaml
legacy/scripts/: dev-stack-up.sh  kind-setup.sh
legacy/src/iceberg_janitor/: __init__.py  catalog.py
legacy/src/iceberg_janitor/analyzer/: __init__.py  health.py
legacy/src/iceberg_janitor/api/: app.py  dependencies.py  routes.py  routes_access.py  routes_cloudevents.py
legacy/src/iceberg_janitor/execution/: flink.py
legacy/src/iceberg_janitor/maintenance/: compaction.py
legacy/src/iceberg_janitor/strategy/: __init__.py  access_tracker.py  adaptive_policy.py  feedback_loop.py  partition.py  triggers.py
legacy/tests/: conftest.py  test_analyzer.py  test_feedback_loop.py  test_policy.py
(+222 files in other folders)
